# matplotlib

./: .appveyor.yml  .cirrus.yml  .clang-tidy  .coveragerc  .cvsignore  .flake8  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .gitignore  .lgtm.yml  .mailmap  .matplotlib-repo  .matplotlibrc  .meeseeksdev.yml  .pre-commit-config.yaml  .svglintrc.mjs  .test_pan.py.kate-swp  .travis-script.sh  .travis.yml  .travis_coveragerc  .yamllint.yml  1session-ses_0b69.md  3dplotting.py  API_CHANGES  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CODING_GUIDE  CONTRIBUTING.md  DEVNOTES  FILETYPES  GOALS  INSTALL  INSTALL.rst  INTERACTIVE  KNOWN_BUGS  LICENSE  LICENSE_PAINT  MANIFEST  (+114 more)
agg23/include/: Makefile.am  agg_alpha_mask_u8.h  agg_arc.h  agg_array.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_bitset_iterator.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_gray.h  agg_color_rgba.h  agg_config.h  agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_smooth_poly1.h  agg_conv_stroke.h  agg_conv_transform.h  agg_conv_unclose_polygon.h  agg_curves.h  agg_dda_line.h  agg_ellipse.h  agg_ellipse_bresenham.h  agg_embedded_raster_fonts.h  agg_font_cache_manager.h  agg_gamma_functions.h  (+88 more)
agg23/include/ctrl/: Makefile.am  agg_bezier_ctrl.h  agg_cbox_ctrl.h  agg_ctrl.h  agg_gamma_ctrl.h  agg_gamma_spline.h  agg_polygon_ctrl.h  agg_rbox_ctrl.h  agg_scale_ctrl.h  agg_slider_ctrl.h  agg_spline_ctrl.h
agg23/include/platform/: Makefile.am  agg_platform_support.h
agg23/include/util/: Makefile.am  agg_color_conv.h  agg_color_conv_rgb16.h  agg_color_conv_rgb8.h
agg23/src/: Makefile  Makefile.am  agg_arc.cpp  agg_arrowhead.cpp  agg_bezier_arc.cpp  agg_bspline.cpp  agg_curves.cpp  agg_embedded_raster_fonts.cpp  agg_gsv_text.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_path_storage.cpp  agg_rasterizer_scanline_aa.cpp  agg_rounded_rect.cpp  agg_sqrt_tables.cpp  agg_trans_affine.cpp  agg_trans_double_path.cpp  agg_trans_single_path.cpp  agg_trans_warp_magnifier.cpp  agg_vcgen_bspline.cpp  agg_vcgen_contour.cpp  agg_vcgen_dash.cpp  agg_vcgen_markers_term.cpp  agg_vcgen_smooth_poly1.cpp  agg_vcgen_stroke.cpp  agg_vpgen_clip_polygon.cpp  agg_vpgen_clip_polyline.cpp  agg_vpgen_segmentator.cpp  autogen.sh  configure.in  copying  readme
agg23/src/ctrl/: Makefile.am  agg_bezier_ctrl.cpp  agg_cbox_ctrl.cpp  agg_gamma_ctrl.cpp  agg_gamma_spline.cpp  agg_polygon_ctrl.cpp  agg_rbox_ctrl.cpp  agg_scale_ctrl.cpp  agg_slider_ctrl.cpp  agg_spline_ctrl.cpp
agg23/src/platform/: Makefile.am
lib/matplotlib/: BranchCovRes.txt  BranchCovResOld.txt  Matplotlib.ipynb  SimpleXMLWriter.py  __init__.py  __init__.pyi  _afm.py  _animation_data.py  _api.py  _auto_placement.py  _blocking_input.py  _c_internal_utils.pyi  _cbook.py  _cm.py  _cm_bivar.py  _cm_listed.py  _cm_multivar.py  _color_data.py  _color_data.pyi  _colors.py  _compress_axes.py  _compress_layout.py  _constrained_layout.py  _containers.py  _contour.py  _docstring.py  _docstring.pyi  _dviread.py  _dviread_vf.py  _enums.py  _enums.pyi  _fontconfig_pattern.py  _image.py  _image.pyi  _layoutbox.py  _layoutgrid.py  _mathtext.py  _mathtext_data.py  _matlab_helpers.py  _path.pyi  (+184 more)
lib/matplotlib/Initialhtmlcov/: .gitignore  __init___py.html  _afm_py.html  _animation_data_py.html  _blocking_input_py.html  _cm_listed_py.html  _cm_py.html  _color_data_py.html  _constrained_layout_py.html  _docstring_py.html  _enums_py.html  _fontconfig_pattern_py.html  _layoutgrid_py.html  _mathtext_data_py.html  _mathtext_py.html  _pylab_helpers_py.html  _text_helpers_py.html  _tight_bbox_py.html  _tight_layout_py.html  _type1font_py.html  _version_py.html  animation_py.html  artist_py.html  axis_py.html  backend_bases_py.html  backend_managers_py.html  backend_tools_py.html  bezier_py.html  category_py.html  cbook_py.html  cm_py.html  collections_py.html  colorbar_py.html  colors_py.html  container_py.html  contour_py.html  d_05bd09be11b8a33c___init___py.html  d_05bd09be11b8a33c_art3d_py.html  d_05bd09be11b8a33c_axes3d_py.html  d_05bd09be11b8a33c_axis3d_py.html  (+222 more)
lib/matplotlib/_api/: __init__.py  __init__.pyi  deprecation.py  deprecation.pyi  meson.build
lib/matplotlib/_backports/: __init__.py
lib/matplotlib/_data_containers/: _helpers.py  containers.py  conversion_edge.py  description.py  meson.build
lib/matplotlib/_traits/: __init__.py  artist.py  artist_withTraits.py  lines.py  traits.py
lib/matplotlib/artist/: __init__.py  artist.py  artist_withTraits.py  traits.py
lib/matplotlib/axes/: __init__.py  __init__.pyi  _axes.py  _axes.pyi  _base.py  _base.pyi  _lines.py  _secondary_axes.py  _secondary_axes.pyi  _subplots.py  _zoom_axes.py  meson.build
lib/matplotlib/backends/: __init__.py  _backend_agg.pyi  _backend_gtk.py  _backend_gtk3.py  _backend_gtk3agg.py  _backend_gtk3cairo.py  _backend_gtkagg.py  _backend_gtkcairo.py  _backend_pdf_ps.py  _backend_qt4.py  _backend_qt4agg.py  _backend_tk.py  _gtk3_compat.py  _macos_window.py  _macosx.pyi  _tkagg.py  backend_agg.py  (+74 more)
src/: .clang-format  MPL_isnan.h  _backend_agg.cpp  _backend_agg.h  _backend_agg_basic_types.h  _backend_agg_wrapper.cpp  _backend_agg_wrapper.h  _backend_gdk.c  _c_internal_utils.c  _c_internal_utils.cpp  _contour.c  _contour.cpp  _contour.h  _contour_wrapper.cpp  _enums.h  _gtkagg.cpp  _gtkgd.c  _image.cpp  _image.h  _image_resample.h  _image_wrapper.cpp  _isnan.c  _macosx.m  _objc_internal_utils.m  _path.cpp  _path.h  _path_wrapper.cpp  _png.cpp  _qhull_wrapper.cpp  _subprocess.c  _tkagg.cpp  _tkmini.h  _transforms.cpp  _transforms.h  _ttconv.cpp  _ttf2ps.cpp  _windowing.cpp  _wxagg.cpp  agg.cxx  agg_py_path_iterator.h  (+36 more)
src/ft2/: _ft2.cpp  _ft2.h  _layout.cpp  _layout.h  _util.cpp  _util.h
src/tri/: _tri.cpp  _tri.h  _tri_wrapper.cpp
(+8790 files in other folders)
